--- a/templates/add_contact.html
+++ b/templates/add_contact.html
@@ -2,48 +2,44 @@
 
 {% block content %}
 <h2>Add New Contact</h2>
-<form method="POST">
+<form method="POST" enctype="multipart/form-data"> <!-- Use enctype to allow file uploads -->
     {{ form.csrf_token }}
+    
     <div class="mb-3">
         {{ form.name.label(class="form-label") }}
         {{ form.name(class="form-control") }}
-        {% if form.name.errors %}
-            {% for error in form.name.errors %}
-                <div class="text-danger">{{ error }}</div>
-            {% endfor %}
-        {% endif %}
     </div>
     
     <div class="mb-3">
         {{ form.phone.label(class="form-label") }}
         {{ form.phone(class="form-control") }}
-        {% if form.phone.errors %}
-            {% for error in form.phone.errors %}
-                <div class="text-danger">{{ error }}</div>
-            {% endfor %}
-        {% endif %}
     </div>
     
     <div class="mb-3">
         {{ form.email.label(class="form-label") }}
         {{ form.email(class="form-control") }}
-        {% if form.email.errors %}
-            {% for error in form.email.errors %}
-                <div class="text-danger">{{ error }}</div>
-            {% endfor %}
-        {% endif %}
     </div>
     
     <div class="mb-3">
         {{ form.type.label(class="form-label") }}
         {{ form.type(class="form-control") }}
-        {% if form.type.errors %}
-            {% for error in form.type.errors %}
-                <div class="text-danger">{{ error }}</div>
-            {% endfor %}
-        {% endif %}
+    </div>
+
+    <div class="mb-3">
+        {{ form.profile_picture.label(class="form-label") }}
+        {{ form.profile_picture(class="form-control") }}
+    </div>
+
+    <div class="mb-3">
+        {{ form.address.label(class="form-label") }}
+        {{ form.address(class="form-control") }}
+    </div>
+    
+    <div class="mb-3">
+        {{ form.birthday.label(class="form-label") }}
+        {{ form.birthday(class="form-control") }}
     </div>
     
     {{ form.submit(class="btn btn-primary") }}
 </form>
-{% endblock %} 
+{% endblock %}
