Feature: Add birthdate and address fields to contacts

--- a/templates/add_contact.html
+++ b/templates/add_contact.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h2>Add New Contact</h2>
-<form method="POST" enctype="multipart/form-data"> <!-- Use enctype to allow file uploads -->
+<form method="POST" enctype="multipart/form-data"> <!-- 1Use enctype to allow file uploads and no empty submissions aded birth date and address-->
     {{ form.csrf_token }}
     
     <div class="mb-3">
