--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -8,7 +8,8 @@
 <table class="table">
     <thead>
         <tr>
-            <th>Name</th>
+            <th>First Name</th>
+            <th>Last Name</th>
             <th>Phone</th>
             <th>Email</th>
             <th>Type</th>
@@ -18,7 +19,8 @@
     <tbody>
         {% for contact in contacts %}
         <tr>
-            <td>{{ contact.name }}</td>
+            <td>{{ contact.first }}</td>
+            <td>{{ contact.last }}</td>
             <td>{{ contact.phone }}</td>
             <td>{{ contact.email }}</td>
             <td>{{ contact.type }}</td>
