--- a/templates/add_contact.html
+++ b/templates/add_contact.html
@@ -26,7 +26,7 @@
     
     <div class="mb-3">
         {{ form.email.label(class="form-label") }}
-        {{ form.email(class="form-control") }}
+        {{ form.email(class="form-control", type="email", title="Please enter a valid email address.") }}
         {% if form.email.errors %}
             {% for error in form.email.errors %}
                 <div class="text-danger">{{ error }}</div>
