--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -1,4 +1,3 @@
-<!-- templates/contacts.html -->
 {% extends "base.html" %}
 
 {% block content %}
@@ -6,7 +5,7 @@
 <form method="GET" action="{{ url_for('list_contacts') }}">
   <div class="row mb-3">
     <div class="col">
-      <input type="text" name="search" class="form-control" placeholder="Search by name" value="{{ request.args.get('search', '') }}">
+      <input type="text" id="searchInput" name="search" class="form-control" placeholder="Search by name" value="{{ request.args.get('search', '') }}">
     </div>
     <div class="col">
       <select name="group" class="form-control">
@@ -16,17 +15,7 @@
         <option value="Other" {% if request.args.get('group')=='Other' %}selected{% endif %}>Other</option>
       </select>
     </div>
-    <div class="col">
-      <select name="tags" class="form-control">
-          <option value="">All Tags</option>
-          <option value="VIP" {% if request.args.get('tags')=='VIP' %}selected{% endif %}>VIP</option>
-          <option value="Family" {% if request.args.get('tags')=='Family' %}selected{% endif %}>Family</option>
-          <option value="Friends" {% if request.args.get('tags')=='Friends' %}selected{% endif %}>Friends</option>
-      </select>
-    </div>
-    <div class="col">
-      <button type="submit" class="btn btn-primary">Filter</button>
-    </div>
+    <!-- Removed the Filter button since live search is enabled -->
   </div>
 </form>
 
@@ -56,4 +45,6 @@
     {% endfor %}
   </tbody>
 </table>
+
+<script src="{{ url_for('static', filename='js/search.js') }}"></script>
 {% endblock %}
